# personal-portfolio-inspector

./: .gitignore  README.md  app.py  pyproject.toml  run.sh
.streamlit/: config.toml
lib/: allocation.py  benchmark.py  classifier.py  correlation.py  data_loader.py  dividends.py  etf_mining.py  fi_projection.py  finviz_screener.py  health.py  history.py  market_data.py  rebalancer.py  screener.py  sectors.py  signals.py  tax_planning.py  wash_sales.py
