[project]
dependencies = ["streamlit>=1.58.0,<2", "pandas>=3.0.3,<4", "yfinance>=1.5.1,<2", "plotly>=6.8.0,<7", "finvizfinance>=1.3.0,<2"]
name = "stock-plan"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
stock_plan = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
